@@ -4,6 +4,9 @@ FlightPath 6.x Changelog
   Fixed by in system.module, where when we load courses and save to our course cache file, we were not excluding the excluded courses.
   This was causing a bug in certain situations.
   
+  Added code to FlightPath object's function to load entire course catalog-- it was included *excluded* courses by default, which was throwing
+  off the subject select menu in the Courses Added by Advisor group.
+  
 
 2023-02-09
   Modified Audit module to have new hooks which allow the module developer to add to the audit screen custom calculations and approvals.
